# PSP-TranslateModTools

./: .gitignore  CLAUDE.md  README.md  REFACTOR_PLAN.md  TODO_PLAN.md  TUTORIAL.md  main.py  pyproject.toml
data/: char_table.json  fftpack_event_map.json
data/wiki_script/: fft_script_raw.wikitext  fft_story_dialogue.json
docs/: DocumentOfComunity.md  TUTORIAL.md  gemini_prompt_template.md
docs/TASK/: MULTI_GAME_NOTES.md  REFACTOR_PLAN.md  TODO_PLAN.md
docs/formats/: EVT_FORMAT.md  LZW_FORMAT.md
psp_modtool/: __init__.py  cli.py
psp_modtool/core/: __init__.py  extractor.py  inspector.py  iso9660.py  pipeline.py  repacker.py  scanner.py  translator.py
psp_modtool/utils/: __init__.py  constants.py  logger.py  text_detect.py
psp_translate/: __main__.py  cli.py  paths.py
psp_translate/codec/: char_table.py  encode.py
psp_translate/evt/: budget.py  parser.py  repack.py
psptranslationmod/: paths.py
tests/: test_stretch_path.py
tools/: EVT_FORMAT.md  LZW_FORMAT.md  TEST_EVT_dialog_only.txt  build_workspace.py  char_table.json  char_table.py  decode_evt.py  encode_evt.py  events_parsed_evt1.json  evt_header.py  evt_parser.py  evt_structure.json  explore.py  extract_proper_nouns.py  fftpack_event_map.json  font_render.py  gemini_prompt_template.md  lzw_ATCHELP.json  lzw_HELP.json  lzw_JOIN.json  lzw_OPEN.json  lzw_SAMPLE.json  lzw_WLDHELP.json  lzw_WORLD.json  lzw_extract.py  patch_iso.py  proper_nouns.json  repack_evt.py  repack_fftpack.py  test_stretch_path.py  translate_gemini.py  translate_pipeline.py  translation_budget.py  translation_workspace.py
(+24 files in other folders)
